--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,67 +1,65 @@
-@import '../../partials/fonts';
+@import "../../partials/fonts";
 
 .header {
-    height: 4rem;
-    width: 100%;
-    background-color: #222930;   
+  height: 4rem;
+  width: 100%;
+  background-color: #222930;
+  display: flex;
+  justify-content: space-between;
+
+  &__right {
     display: flex;
+    margin-left: 0;
+    width: 20%;
+  }
+
+  &__middle {
+    display: flex;
+    margin-left: 12rem;
+    width: 10rem;
     justify-content: space-between;
+  }
 
-    &__right {
-        display: flex;
-        margin-left: 0;
-        width: 20%;
-    }
+  &__logo {
+    height: 8rem;
+    width: 10rem;
+    display: flex;
+    position: absolute;
+    left: 7rem;
+    margin-top: 0.25rem;
+  }
 
-    &__middle {
-        display: flex;
-        margin-left: 12rem;
-        width: 10rem;
-        justify-content: space-between;
+  &__search {
+    height: 8rem;
+    width: 15rem;
+    position: absolute;
+    left: -2rem;
+  }
 
-    }
-    
-    &__logo {
-        height: 8rem;
-        width: 10rem;
-        display: flex;  
-        position: absolute; 
-        left: 7rem;
-        margin-top:.25rem;    
+  &__band {
+    font-family: "Guaraldo";
+    font-size: 0.5rem;
+    margin-top: 3rem;
 
-    }
+    color: #5d7996;
+  }
 
-    &__search {
-        height: 8rem;
-        width: 15rem;
-        position: absolute;
-        left: -2rem;
-    }
+  &__band-image {
+    border-radius: 50%;
+    width: 3.5rem;
+    height: 3.5rem;
+    margin-top: 2rem;
+    margin-right: 1rem;
+    margin-left: 2rem;
+  }
 
-    &__band {
-        font-family: "Guaraldo";
-        font-size: .5rem;
-        margin-top: 3rem;
-       
-        color: #5d7996;
-    }
-
-    &__band-image {
-        border-radius: 50%;
-        width: 3.5rem;
-        height: 3.5rem;
-        margin-top: 2rem;
-        margin-right: 1rem;
-        margin-left: 2rem;
-    }
-
-    &__facebook {
-        width: 2.5rem;
-        height: 2.5rem; 
-        border-radius: 20%;
-        background-color: #295581;
-        margin-top: 2.5rem;
-        margin-right: 1rem;
-        margin-left: 4rem;
-    }
+  &__facebook {
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 20%;
+    background-color: #295581;
+    margin-top: 2.5rem;
+    margin-right: 1rem;
+    margin-left: 4rem;
+  }
 }
