--- a/client/src/components/SignupLogin/SignupLogin.scss
+++ b/client/src/components/SignupLogin/SignupLogin.scss
@@ -1,253 +1,239 @@
 @import "../../partials/mixins.scss";
 
-html, body {
-    background-color: #c3cbdb;
-  
+html,
+body {
+  background-color: #c3cbdb;
 }
 
 .btn-login {
-    background-color: #3b74ad;
-    width: 25%;
-    border: none;
-    border-radius: .5rem;
-    color: white;
-    height: 2.25rem;
-    // box-shadow: 5px 5px 10px #888888;
-    margin-bottom: 2rem;
-
+  background-color: #3b74ad;
+  width: 25%;
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+  height: 2.25rem;
+  // box-shadow: 5px 5px 10px #888888;
+  margin-bottom: 2rem;
 }
 
 .btn-login-two {
-    background-color: #3b74ad;
-    width: 25%;
-    border: none;
-    border-radius: .5rem;
-    color: white;
-    height: 2.25rem;
-    // box-shadow: 5px 5px 10px #888888;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-
+  background-color: #3b74ad;
+  width: 25%;
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+  height: 2.25rem;
+  // box-shadow: 5px 5px 10px #888888;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .email-style {
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    
-    
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .email-style-two {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    padding-bottom: 1rem;
-    border-radius: .5rem;
-    
-    
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 0.5rem;
 }
 
 .label-header {
-    padding-top: 3rem;
+  padding-top: 3rem;
 }
 .label-header-two {
-    padding-top: 1rem;
+  padding-top: 1rem;
 }
 
 .card-style {
-    display:flex;
-    flex-direction: column;
-    border:none;
-    justify-content: center;
-    align-items: center;
-    background-color: #c3cbdb;
-    width: 50%;
+  display: flex;
+  flex-direction: column;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  background-color: #c3cbdb;
+  width: 50%;
 }
 
 .btn-update {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1.5rem;
-    background-color: #222930;
-    width: 30%;
-    margin-left: auto;
-    margin-right: auto;
-    border: none;
-    border-radius: .25rem;
-    color: white;
-    height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.5rem;
+  background-color: #222930;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  border: none;
+  border-radius: 0.25rem;
+  color: white;
+  height: 2rem;
 }
 
 .form-style {
-    width: 50%;
-    border-radius: .5rem;
-    height: 2rem;
-    border: none;
-    margin: .5rem 0;
+  width: 50%;
+  border-radius: 0.5rem;
+  height: 2rem;
+  border: none;
+  margin: 0.5rem 0;
 }
 
 .header-login {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 .profile__card {
-    background-color:  #222930;
-    box-shadow: 5px 10px 18px #3b74ad;
-    border-radius: 1rem;
-    height: 35rem;
+  background-color: #222930;
+  box-shadow: 5px 10px 18px #3b74ad;
+  border-radius: 1rem;
+  height: 35rem;
+  width: 15rem;
+  border: none;
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  font-size: 1rem;
+
+  @include tablet {
     width: 15rem;
-    border: none;
-    margin-top: .5rem;
-    margin-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
-    font-size: 1rem;
+  }
 
-    @include tablet {
-        width: 15rem;
-    }
-
-    @include desktop {
-        width: 23rem;
-    }
+  @include desktop {
+    width: 23rem;
+  }
 }
 
 .profile__card-two {
-    
-    background-color:  #222930;
-    box-shadow: 5px 10px 18px #3b74ad;
-    border-radius: 1rem;
-    height: 35rem;
-    width: 20rem;
-    border: none;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    color: white;
-    font-size: 1rem;
+  background-color: #222930;
+  box-shadow: 5px 10px 18px #3b74ad;
+  border-radius: 1rem;
+  height: 35rem;
+  width: 20rem;
+  border: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  color: white;
+  font-size: 1rem;
 
-    @include tablet {
-        width: 33rem;
-    }
+  @include tablet {
+    width: 33rem;
+  }
 }
 .profile__card-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 
-    @include tablet {
-        flex-direction: row;
-    }
+  @include tablet {
+    flex-direction: row;
+  }
 }
 
-
-
 .forgot-pass {
-    background-color: #3b74ad;   
-    padding: .5rem .55rem;
-    border: none;
-    border-radius: .5rem;
-    color: white;
-    height: 2.25rem;
-    text-decoration: none;
-    margin-bottom: 2rem;   
-    // box-shadow: 5px 5px 10px #888888;
+  background-color: #3b74ad;
+  padding: 0.5rem 0.55rem;
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+  height: 2.25rem;
+  text-decoration: none;
+  margin-bottom: 2rem;
+  // box-shadow: 5px 5px 10px #888888;
 }
 
 .forgot-pass-two {
-    background-color: #3b74ad;   
-    padding: .5rem .55rem;
-    border: none;
-    border-radius: .5rem;
-    color: white;
-    height: 2.25rem;
-    text-decoration: none;
-    margin-bottom: 4rem;   
-    // box-shadow: 5px 5px 10px #888888;
+  background-color: #3b74ad;
+  padding: 0.5rem 0.55rem;
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+  height: 2.25rem;
+  text-decoration: none;
+  margin-bottom: 4rem;
+  // box-shadow: 5px 5px 10px #888888;
 }
 
-
-
 .forgot__need {
-    display: flex;
-    flex-direction: column;    
-    
-    margin-top:2rem;
-    margin-left: 7.5rem;
-    margin-bottom: 1rem;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
 
-    @include tablet {
-        margin-left: 12.5rem;
-    }
+  margin-top: 2rem;
+  margin-left: 7.5rem;
+  margin-bottom: 1rem;
+  width: 25%;
+
+  @include tablet {
+    margin-left: 12.5rem;
+  }
 }
 
 .forgot__need-two {
-    display: flex;
-    flex-direction: column;    
-    
-    margin-top:4rem;
-    margin-left: 13rem;
-    margin-bottom: 1rem;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 4rem;
+  margin-left: 13rem;
+  margin-bottom: 1rem;
+  width: 25%;
 }
 
 .forgot__need-three {
-    display: flex;
-    flex-direction: column;    
-    
-    margin-top: .5rem;
-    margin-left: 13rem;
-    margin-bottom: 1.5rem;
-    width: 25%;
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 0.5rem;
+  margin-left: 13rem;
+  margin-bottom: 1.5rem;
+  width: 25%;
 }
 
-
 .profile__icon {
-    position: relative;
-    right: 10rem;
-    bottom: 2.5rem;
+  position: relative;
+  right: 10rem;
+  bottom: 2.5rem;
 }
 
 .profile__icon-two {
-    position: relative;
-    right: 4rem;
-    bottom: 2.5rem;
+  position: relative;
+  right: 4rem;
+  bottom: 2.5rem;
 }
 
 ul {
-    list-style: square;
-    line-height: 2.5rem;
-    text-align: left;
-    
-    
-  }
+  list-style: square;
+  line-height: 2.5rem;
+  text-align: left;
+}
 
-  .footer__main {
+.footer__main {
+  position: relative;
+  bottom: -4.5rem;
+  width: 100%;
+
+  @include tablet {
     position: relative;
-    bottom: -4.5rem;
-    width: 100%;
-
-    @include tablet {
-        position: relative;
-    }
   }
+}
 
-  .footer__main-one {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-  }
+.footer__main-one {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
